--- a/web/src/main/resources/templates/room.html
+++ b/web/src/main/resources/templates/room.html
@@ -22,7 +22,7 @@
             <div class="card" id="{{content.id}}">
                 <div class="card-body pb-1">
                     <div class="pt-1 pb-1">
-                        <img id="img-{{content.id}}" src="/local/images/umr.webp" class="img-fluid img-center" style="height: 100px;" alt="头像">
+                        <img id="img-{{content.id}}" src="{{content.user.avatar}}" class="img-fluid img-center" style="height: 100px;" alt="头像">
                     </div>
                     <h5 class="h4 lh-130 mb-1 text-center">{{content.user.realname}}</h5>
                     <p class="text-muted mb-0 text-center">
