--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -70,8 +70,8 @@
                     <button id="login" type="button" class="btn btn-block btn-primary">登录</button></div>
             </form>
         </div>
-        <div class="card-footer px-md-5"><small>Not registered?</small>
-            <a href="#" class="small font-weight-bold">Create account</a></div>
+        <div class="card-footer px-md-5"><small>未注册?</small>
+            <a href="/register" class="small font-weight-bold">创建一个账号</a></div>
     </script>
 </head>
 <body data-aos-easing="ease-out-quad" data-aos-duration="700" data-aos-delay="0" onload="load()">
