--- a/web/src/main/resources/templates/room.html
+++ b/web/src/main/resources/templates/room.html
@@ -74,32 +74,6 @@
             '/local/images/三点.png','/local/images/四点.png',
             '/local/images/五点.png','/local/images/六点.png'];
 
-        // var numberUrlList = [
-        //     '<img class="img-fluid" src="/local/images/number-00.png" style="height: 10px; width: 10px;" alt="0">',
-        //     '<img class="img-fluid" src="/local/images/number-01.png" style="height: 10px; width: 10px;" alt="1">',
-        //     '<img class="img-fluid" src="/local/images/number-02.png" style="height: 10px; width: 10px;" alt="2">',
-        //     '<img class="img-fluid" src="/local/images/number-03.png" style="height: 10px; width: 10px;" alt="3">',
-        //     '<img class="img-fluid" src="/local/images/number-04.png" style="height: 10px; width: 10px;" alt="4">',
-        //     '<img class="img-fluid" src="/local/images/number-05.png" style="height: 10px; width: 10px;" alt="5">',
-        //     '<img class="img-fluid" src="/local/images/number-06.png" style="height: 10px; width: 10px;" alt="6">',
-        //     '<img class="img-fluid" src="/local/images/number-07.png" style="height: 10px; width: 10px;" alt="7">',
-        //     '<img class="img-fluid" src="/local/images/number-08.png" style="height: 10px; width: 10px;" alt="8">',
-        //     '<img class="img-fluid" src="/local/images/number-09.png" style="height: 10px; width: 10px;" alt="9">'
-        // ];
-
-        // var numberSelectUrlList = [
-        //     '<img class="img-fluid" src="/local/images/number-00.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="0">',
-        //     '<img class="img-fluid" src="/local/images/number-01.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="1">',
-        //     '<img class="img-fluid" src="/local/images/number-02.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="2">',
-        //     '<img class="img-fluid" src="/local/images/number-03.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="3">',
-        //     '<img class="img-fluid" src="/local/images/number-04.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="4">',
-        //     '<img class="img-fluid" src="/local/images/number-05.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="5">',
-        //     '<img class="img-fluid" src="/local/images/number-06.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="6">',
-        //     '<img class="img-fluid" src="/local/images/number-07.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="7">',
-        //     '<img class="img-fluid" src="/local/images/number-08.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="8">',
-        //     '<img class="img-fluid" src="/local/images/number-09.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="9">'
-        // ]
-
         var diceTaskId = null;
 
         function connect() {
@@ -214,7 +188,7 @@
                     var playDice = document.getElementById("playDice");
                     //询问开始游戏
                     if(parse.code === 104){
-                        document.getElementById("start-game").disabled = false;
+                        canStart();
                     }
                     //询问投骰子还是选择分数
                     if(parse.code === 6){
@@ -233,6 +207,9 @@
                         let room = parse.content;
                         messageId = room.maxMessageId;
                         let currentPlayer = null;
+                        if([[${session.room.owner.id}]] != [[${session.user.id}]]){
+                            document.getElementById("start-mark").getAttributeNode("data-bs-content").value = "等待房主开始游戏";
+                        }
                         for (let i = 0; i < room.playerList.length; i++) {
                             let player = room.playerList[i];
                             //展示玩家
@@ -252,7 +229,7 @@
                         }
                         //可以开始标记
                         if(room.roomStatus === 1 && room.owner.id === [[${session.user.id}]]){
-                            document.getElementById("start-game").disabled = false;
+                            canStart();
                         }
                         //换人标记
                         if(room.roomStatus === 2){
@@ -432,6 +409,12 @@
                 JSON.stringify({'code': 109}));
         }
 
+        function canStart(){
+            document.getElementById("start-mark").getAttributeNode("data-bs-content").value = "";
+            document.getElementById("start-game").disabled = false;
+            reloadPopover();
+        }
+
         function reloadPopover(){
             var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
             var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
@@ -458,7 +441,7 @@
                     <!-- Section title -->
                     <div class="row justify-content-center text-center">
                         <div>
-                            <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="人数不足，无法开始">
+                            <span id="start-mark" class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="人数不足，无法开始">
                                 <button id="start-game" onclick="startGame()" class="btn btn-primary" type="button" disabled>开始游戏</button>
                             </span>
                             <button onclick="dismissRoom()" class="btn btn-danger">解散游戏</button>
