--- a/web/src/main/resources/templates/mar.html
+++ b/web/src/main/resources/templates/mar.html
@@ -79,7 +79,7 @@
           }
           //收到游戏结束
           if(parse.code === 111){
-            if(parse.content.winner != null){
+            if(parse.content != null){
               alert("赢家为"+parse.content.user.realname+"！");
             } else {
               alert("平局！");
